brain/sources/prod-metadata/objects/Candidate_Portal_Session__c/Candidate_Portal_Session__c.object-meta.xml
<CustomObject>
    <label>Candidate Portal Session</label>
    <nameField>
        <displayFormat>CSN-{00000}</displayFormat>
        <label>Candidate Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Portal Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>