brain/sources/prod-metadata/objects/Candidate_Portal_Session__c/fields/Candidate_Credential__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Credential</label>
    <referenceTo>Candidate_Portal_Credential__c</referenceTo>
    <relationshipLabel>Candidate Portal Sessions</relationshipLabel>
    <relationshipName>Candidate_Portal_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>