brain/sources/prod-metadata/objects/Candidate_Portal_Session__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>