brain/sources/prod-metadata/objects/Candidate_Portal_Session__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>Client IP address captured at login. Used for audit and abuse detection.</description>
    <inlineHelpText>The IP address from which the candidate signed in. Populated automatically.</inlineHelpText>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>